[gd_scene load_steps=5 format=2]

[ext_resource path="res://StressTest/UserAgent/UserAgent.gd" type="Script" id=1]
[ext_resource path="res://StressTest/UserAgent/UserFunctions.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-firebase/firebase/firebase.tscn" type="PackedScene" id=3]
[ext_resource path="res://StressTest/UserAgent/UserView.gd" type="Script" id=4]

[node name="UserView" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 256, 96 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
email = "02@stress.test"
password = "stresstest02"

[node name="UserAgent" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Firebase" parent="UserAgent" instance=ExtResource( 3 )]

[node name="UserFunctions" type="Node" parent="UserAgent"]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_right = 1906.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 8 )
size_flags_horizontal = 3
color = Color( 0.2, 0.18, 0.18, 1 )

[node name="Max" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 1906.0
margin_bottom = 26.0
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Max"]
margin_right = 951.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Max Latency"
align = 2

[node name="Value" type="Label" parent="VBoxContainer/Max"]
margin_left = 955.0
margin_right = 1906.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0 ms"

[node name="Avg" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 1906.0
margin_bottom = 44.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Avg"]
margin_right = 951.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Average Latency"
align = 2

[node name="Value" type="Label" parent="VBoxContainer/Avg"]
margin_left = 955.0
margin_right = 1906.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0 ms"

[node name="Last" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 1906.0
margin_bottom = 62.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Last"]
margin_right = 951.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Last Latency"
align = 2

[node name="Value" type="Label" parent="VBoxContainer/Last"]
margin_left = 955.0
margin_right = 1906.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0 ms"

[node name="Count" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 1906.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Count"]
margin_right = 951.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Count"
align = 2

[node name="Value" type="Label" parent="VBoxContainer/Count"]
margin_left = 955.0
margin_right = 1906.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[connection signal="iteraion_complete" from="UserAgent" to="." method="_on_UserAgent_iteraion_complete"]
[connection signal="status_changed" from="UserAgent" to="." method="_on_UserAgent_status_changed"]
